# cgsubmit

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
cgsubmit/: __init__.py  __main__.py
cgsubmit/api/: api.py
cgsubmit/games/: __init__.py  games.py
cgsubmit/tests/: test_api.py  test_games.py
